cleared warning in compiler

--- a/src/scss/splash.scss
+++ b/src/scss/splash.scss
@@ -76,7 +76,7 @@
 
         /* Track */
         &::-webkit-scrollbar-track {
-          background: $bg-light;
+          background: $background;
         }
 
         /* Handle */
