--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,11 +1,11 @@
 :root {
   /* overflow: hidden; //hide overflow once media querries are set */
   overflow: hidden;
-  min-width: 340px;
-  min-height: 380px;
   background-color: $background;
   background-attachment: fixed;
   background-image: $bg-img;
+  width: 100%;
+  height: 100%;
 }
 .App {
   text-align: center;
