--- a/src/scss/splash.scss
+++ b/src/scss/splash.scss
@@ -69,6 +69,7 @@
         }
         overflow-y: auto;
         overflow-x: hidden;
+        overscroll-behavior: none;
         /* width */
         &::-webkit-scrollbar {
           width: 10px;
@@ -121,7 +122,7 @@
         }
         .splash-description {
           grid-area: desciption;
-          text-align: left;
+          text-align: justify;
           margin: 1rem;
 
           font-size: calc(10px + 3vmin);
