--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -19,7 +19,6 @@
       margin: 0 auto;
       user-select: none;
     }
-    
   }
   position: absolute;
   background-color: $background;
@@ -30,10 +29,16 @@
   z-index: 9;
   color: $white;
   font-family: $sans;
+  padding-left: 1rem;
   font-size: calc(8px + 2vh);
   border-radius: 25px;
   border: solid $bg-dark 10px;
-  padding: 1rem;
+  @include short-view {
+    top: 1vh;
+    left: 1vw;
+    bottom: 1vh;
+
+  }
   a{
     color: $link;
     text-decoration: none;
@@ -41,21 +46,24 @@
 
       color: $contrast;
     }
+
   }
   &.on {
     transform: translate(0, 0);
     transition: transform 0.3s ease-out;
   }
   &.off {
-    transform: translate(calc(200vw - 25px), 0);
+    transform: translate(calc(-100vw - 25px), 0);
     transition: transform 0.3s ease-in;
     z-index: 8;
   }
+
   @include nav-break {
     right: 7rem;
   
   }
   .about-content {
+
     .about-header {
       text-align: left;
       font-family: $sans;
@@ -64,7 +72,6 @@
       padding-bottom: 1vh;
     }
     .about-intro {
-      padding: 0.5vw;
     text-align: justify;
       font-size: calc(8px + 3vw);
       padding-bottom: 1vh;
@@ -115,14 +122,17 @@
 
       font-family: $fancy-sans;
     }
-    margin-right: 13vw;
-    padding-right: 1vw;
-    height: calc(90vh - 3rem);
+    margin-right: 9vw;
+    padding-right: 2vw;
+    height: calc(90vh - 1.2rem);
     overflow-y: auto;
     overflow-x: hidden;
     overscroll-behavior: none;
 
     line-height: 1.25;
+    @include short-view {
+      height: calc(100vh - 4rem);
+    }
     @include nav-break {
       margin-right: 7rem;
     
