--- a/src/scss/social.scss
+++ b/src/scss/social.scss
@@ -12,23 +12,23 @@
     position: absolute;
     bottom: 2rem;
     width: 100%;
-    transition: transform 0.3s ease-out; 
-    transform: translate(0, calc(40px + 85vh + 0.25rem));
-     
+    transition: transform 0.3s ease-out;
+    transform: translate(-100vw, 0);
     z-index: 11;
-    @include short-view {
-      transform: translate(-100vw, 0);
-
-    }  
   }
 
   .social-media {
     margin-right: 10vw;
-    width: calc(100vw - 15rem);
-    min-width: 75vw;
+    width: 80vw;
+
     background-color: rgba(12, 12, 29, 0.582);
     box-shadow: -5px 5px 30px $black;
     border-radius: 0 7px 0 0;
+
+    @include nav-break {
+    width: calc(100vw - 15rem);
+
+    }
     @include short-view {
       border-radius: 0;
     }
@@ -52,7 +52,6 @@
         color: $link;
       }
       @include short-view {
-        
       }
     }
     h1 {
@@ -81,17 +80,15 @@
       align-items: stretch;
     }
     li {
-svg{
-      width: 100%;
-      fill: $contrast;
-      filter: url(#f2);
-      &:hover {
-
-        fill: $link;
+      svg {
+        width: 100%;
+        fill: $contrast;
+        filter: url(#f2);
+        &:hover {
+          fill: $link;
+        }
       }
-}
       padding: 0.3rem;
-
     }
   }
 }
