--- a/src/scss/projectsearch.scss
+++ b/src/scss/projectsearch.scss
@@ -8,6 +8,10 @@
   border-radius: 0 45px 45px 0;
   display: flex;
   justify-self: start;
+  @include short-view{
+    height: 40px;
+    
+  }
   &:hover {
     .searchInput {
       width: 50vw;
@@ -45,6 +49,10 @@
   align-items: center;
   transition: 0.4s;
   box-shadow: 3px 5px 30px $background;
+  @include short-view {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 .searchInput {
@@ -59,6 +67,12 @@
   line-height: 40px;
   width: 0px;
   box-shadow: 3px 5px 30px $background;
+  @include short-view {
+    line-height: 16px;
+    transition: 0.4s;
+    line-height: 20px;
+
+  }
 }
 .expand {
   width: 50vw;
@@ -68,6 +82,11 @@
   position: absolute;
   z-index: 11;
   transform: scale(0.5);
+  @include short-view {
+    transform: scale(0.25);
+
+  }
+
 }
 
 @media screen and (max-width: 620px) {
