--- a/src/scss/splash.scss
+++ b/src/scss/splash.scss
@@ -7,7 +7,7 @@
   width: calc(100vw - 16rem);
   min-width: 70vw;
   min-height: 30vh;
-  max-height: calc(100vh - 15rem);
+  max-height: calc(100vh - 1rem);
   z-index: 1;
 
   top: calc(10vh + 5rem);
@@ -70,7 +70,7 @@
           grid-template-areas:
             "title title"
             "img  bullet"
-            "desciption desciption";
+            "description description";
         }
         overflow-y: auto;
         overflow-x: hidden;
@@ -127,7 +127,7 @@
           }
         }
         .splash-description {
-          grid-area: desciption;
+          grid-area: description;
           text-align: justify;
           margin: 1rem;
 
