cleaned up site

--- a/src/scss/splash.scss
+++ b/src/scss/splash.scss
@@ -63,7 +63,7 @@
         grid-template-areas:
           "title"
           "img"
-          "desciption"
+          "description"
           "bullet";
 
         @include phone-view {
