--- a/src/scss/splash.scss
+++ b/src/scss/splash.scss
@@ -1,13 +1,12 @@
 .splash-wrap {
-  margin: 1rem;
+  margin: 2rem;
 
   position: relative;
-  border: .8rem solid transparent;
-  border-image: url(../svg/border-dark.svg) 8% stretch;
+
   width: calc(100vw - 16rem);
   min-width: 70vw;
   min-height: 30vh;
-  max-height: calc(100vh - 1rem);
+  max-height: calc(100vh - 24rem);
   z-index: 1;
 
   top: calc(10vh + 5rem);
@@ -25,6 +24,9 @@
     width: calc(100vw - 16rem);
     min-width: 70vw;
     background-color: $background;
+    border-radius: 25px;
+
+    border: solid 10px $bg-dark;
     .splash-header {
       color: $white;
       margin-top: 1rem;
@@ -52,8 +54,10 @@
         font-weight: bold;
         background-color: $background;
         font-size: calc(1rem + 4vw);
-        max-height: calc(100vh - 22rem);
-
+        max-height: calc(100vh - 31rem);
+@include short-view {
+  max-height: calc(100vh - 25rem);
+}
         align-self: start;
 
         width: calc(100vw - 21.5rem);
