--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -1,12 +1,19 @@
 .contact-wrap {
   overscroll-behavior: none;
-
   .contact-intro {
-    margin: 1.5rem;
-    margin-right: 5rem;
+    position: fixed;
+    font-weight: bold;
+    z-index: 11;
+    top: -1rem;
+    left: 20vw;
+    padding: 1rem;
     text-align: left;
     line-height: 1.5;
-    font-size: calc(12px + 2vw);
+    font-size: calc(6px + 3vh);
+    background-color: $bg-dark;
+    transform: rotate(6deg);
+    border-radius: 40%;
+
   }
   .close-panel {
     background-color: $bg-dark;
@@ -57,6 +64,7 @@
     
     }
 
+
     .form-group {
       margin-left: -1rem;
       padding-top: 0.5rem;
@@ -65,6 +73,7 @@
         margin-left: 2rem;
         font-size: calc(20px + 1vw);
       }
+
     }
     .contact-button {
       margin: 0.9rem 0 0 0.9rem;
@@ -92,10 +101,8 @@
       display: block;
       min-width: 16rem;
       width: 50vw;
-
       margin: 1rem 0 0 1rem;
       font-size: 1.5rem;
-
       line-height: 2;
       color: $black;
       background-color: $white;
@@ -115,9 +122,7 @@
       width: 50vw;
       margin: 1rem 0 0 1rem;
       font-family: $fancy-sans;
-
       font-size: 1.5rem;
-
       line-height: 1.1;
       color: $black;
       background-color: $white;
@@ -137,6 +142,7 @@
     height: calc(200px + 38vmax);
 
     svg {
+      transform: rotate(20deg);
       cursor: pointer;
       position: absolute;
       z-index: 9;
@@ -185,4 +191,25 @@
   text-align: left;
   padding: 1rem;
   line-height: 1.3;
+}
+.form-footer {
+  text-align: center;
+  font-size: calc(10px + 2vw);
+}
+
+.contact-bottom {
+  position: fixed;
+  font-weight: bold;
+  text-align: center;
+  color: $black;
+  left: 1rem;
+  bottom: 1.5rem;
+  background-color: $blue;
+  padding: 1rem;
+  width: 25vw;
+  border-radius: 40%;
+  border: 5px solid $bg-dark;
+  font-size: calc(10px + 3vw);
+  transform: rotate(-3deg);
+
 }
