--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -39,7 +39,7 @@
   @include short-view {
     top: 1vh;
     left: 1vw;
-    bottom: 1vh;
+    bottom: 6vh;
   }
   .contact-form {
     position: relative;
@@ -146,7 +146,7 @@
       cursor: pointer;
       position: absolute;
       z-index: 9;
-      bottom: 2rem;
+      bottom: 0;
       right: calc(20% - #{1rem / 2});
       width: calc(50px + 12vmin);
       fill: $contrast;
@@ -199,17 +199,22 @@
 
 .contact-bottom {
   position: fixed;
+  z-index: 9;
   font-weight: bold;
   text-align: center;
   color: $black;
-  left: 1rem;
-  bottom: 1.5rem;
-  background-color: $blue;
-  padding: 1rem;
+  right: 0;
+  margin-right: 40vw;
+  bottom: 0;
+  background-color: $bg-light;
+  padding: 0.5rem;
   width: 25vw;
+  max-width: 10rem;
   border-radius: 40%;
   border: 5px solid $bg-dark;
-  font-size: calc(10px + 3vw);
+  font-size: calc(8px + 2vh);
   transform: rotate(-3deg);
-
+  @include nav-break {
+    margin-right: 20rem;
+  }
 }
