--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,6 +1,7 @@
 :root {
   /* overflow: hidden; //hide overflow once media querries are set */
   overflow: hidden;
+  overscroll-behavior: none;
   background-color: $background;
   background-attachment: fixed;
   background-image: $bg-img;
