--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -175,7 +175,7 @@
     transition: transform 0.3s ease-out;
   }
   &.off {
-    transform: translate(calc(-100vw - 25px), 0);
+    transform: translate(calc(-200vw - 25px), 0);
     transition: transform 0.3s ease-in;
     z-index: 8;
   }
@@ -194,7 +194,8 @@
 }
 .form-footer {
   text-align: center;
-  font-size: calc(10px + 2vw);
+  font-size: calc(5px + 2vh);
+
 }
 
 .contact-bottom {
