--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -44,7 +44,7 @@
   .contact-form {
     position: relative;
     z-index: 10;
-    width: calc(58vw + 5rem);
+    width: calc(60vw + 5rem);
     font-family: $sans;
 
     @include nav-break {
@@ -66,7 +66,7 @@
 
 
     .form-group {
-      margin-left: -1rem;
+      margin-left: -1.3rem;
       padding-top: 0.5rem;
       font-size: 1.2rem;
       label {
@@ -102,8 +102,9 @@
       min-width: 16rem;
       width: 50vw;
       margin: 1rem 0 0 1rem;
-      font-size: 1.5rem;
-      line-height: 2;
+      font-size: calc(10px + 1vh);
+      padding: 0.5rem;
+      line-height: 1.2;
       color: $black;
       background-color: $white;
       background-clip: padding-box;
@@ -122,7 +123,8 @@
       width: 50vw;
       margin: 1rem 0 0 1rem;
       font-family: $fancy-sans;
-      font-size: 1.5rem;
+      font-size: calc(10px + 1vh);
+      padding: 0.5rem;
       line-height: 1.1;
       color: $black;
       background-color: $white;
@@ -194,7 +196,7 @@
 }
 .form-footer {
   text-align: center;
-  font-size: calc(5px + 2vh);
+  font-size: calc(5px + 1.8vh);
 
 }
 
