--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -60,7 +60,7 @@
     overflow-x: hidden;
     overscroll-behavior: none;
     @include short-view {
-      height: calc(100vh - 8.1rem);
+      height: 100%;
     }
     @include nav-break {
       margin-right: 7.8rem;
