--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -7,7 +7,7 @@
     padding: 0.5rem;
     color: $white;
     font-family: $nav-sans;
-    background-color: $bg-dark;
+    background-color: $footer;
     height: 1.8rem;
     font-size: 1.5rem;
     z-index: 12;
