--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -4,8 +4,6 @@
   @include big-width() {
     grid-template-columns: repeat(2, 1fr);
   }
-
-
 }
 
 .project-border {
@@ -13,7 +11,6 @@
   padding: 1rem;
   background-size: 100% 100%;
   background-image: url(../svg/project-border-bg.svg);
-  
 }
 
 .p-header {
@@ -35,7 +32,7 @@
 .project-list {
   font-family: $sans;
 
-  font-size: calc(10px + 1.5vw);
+  font-size: calc(15px + 1vw);
   display: flex;
   align-items: stretch;
   color: $black;
@@ -47,10 +44,18 @@
     color: $black;
   }
 }
-    .project-description {
-      font-size: calc(10px + 1.5vw);
-      font-weight: bold;
-    }
+.project-description {
+  font-size: calc(15px + 1vw);
+  font-weight: bold;
+}
+@include big-width() {
+  .project-list {
+    font-size: calc(8px + 1vw);
+  }
+
+  .project-description {
+    font-size: calc(5px + 1vw);}
+}
 
 .project-item {
   font-family: $sans;
@@ -94,23 +99,19 @@
   @include phone-view() {
     transition: 600ms;
     width: calc(9rem + 8vw);
-    height:calc(9rem + 6vw);;
+    height: calc(9rem + 6vw);
     background-size: 500px;
     background-position-x: -150px;
-
   }
 }
 
 .project-icons {
-
   display: flex;
   align-items: center;
   justify-content: space-between;
 
   @include phone-view() {
     justify-content: space-between;
-
-
   }
   .project-icon {
     max-width: 5rem;
@@ -132,8 +133,6 @@
   a {
     text-decoration: none;
     color: $black, 20%;
-
-
   }
 
   p {
@@ -144,7 +143,6 @@
     @include phone-view() {
       width: 100%;
       line-height: 1.2;
-
     }
     @include big-width {
       line-height: 1.2;
