--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -72,7 +72,7 @@
       padding-bottom: 1vh;
     }
     .about-intro {
-      text-align: justify;
+      text-align: left;
 
       padding-bottom: 1vh;
       line-height: 1;
