--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -86,10 +86,10 @@
 }
 
 .project-img {
-  padding: 2rem;
   margin: auto;
-  width: calc(8rem + 4vw);
-  height: calc(5rem + 4vw);
+  min-width: 15rem;
+  width: calc(15rem + 4vw);
+  height: calc(9rem + 4vw);
   background-size: 120%;
   transition: 300ms;
   border-radius: 12%;
@@ -107,18 +107,22 @@
 
 .project-icons {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: space-between;
-
+  height: 100%;
   @include phone-view() {
     justify-content: space-between;
   }
   .project-icon {
     max-width: 5rem;
-    width: calc(10px + 4vw);
-    fill: $background;
+    margin: 0.25rem;
+    width: calc(12px + 4vh);
+    height: calc(12px + 4vh);
+    fill: $contrast;
+    background-color: $background;
+    border-radius: 50%;
     &:hover {
-      fill: $contrast;
+      fill: $link;
     }
   }
   img {
