--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -1,164 +1,63 @@
-.about-wrap {
-  .close-panel {
-    background-color: $bg-dark;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    padding-left: 0.5rem;
-    width: 2rem;
-    border-radius: 0 15px 15px 0;
-    color: $contrast;
-    font-size: 2.5rem;
-    font-weight: 900;
-    font-family: $fancy-sans;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    .close-panel-button {
-      margin: 0 auto;
-      user-select: none;
-    }
-  }
-  position: absolute;
-  background-color: $background;
-  top: 5vh;
-  bottom: 6vh;
-  right: 5vw;
-  left: 5vw;
-  z-index: 9;
-  color: $white;
-  font-family: $sans;
-  padding-left: 1rem;
-  border-radius: 25px;
-  border: solid $bg-dark 10px;
-  @include short-view {
-    top: 1vh;
-    left: 1vw;
-    bottom: 6vh;
-  }
-  a {
-    color: $link;
-    text-decoration: none;
-    &:hover {
-      color: $contrast;
-    }
-  }
-  &.on {
-    transform: translate(0, 0);
-    transition: transform 0.3s ease-out;
-  }
-  &.off {
-    transform: translate(calc(-200vw - 25px), 0);
-    transition: transform 0.3s ease-in;
-    z-index: 8;
-  }
+.content-scroll {
+  .about-header {
+    text-align: left;
+    font-family: $sans;
+    text-decoration: underline dotted;
 
-  @include nav-break {
-    right: 7rem;
+    padding-bottom: 1vh;
   }
-  h2 {
-    font-size: calc(20px + 1vw);
+  .about-intro {
+    text-align: left;
+
+    padding-bottom: 1vh;
+    line-height: 1;
   }
-  p {
-    font-size: calc(15px + 1vw);
-  }
-  .about-content {
-    .about-header {
+  .about-web {
+    text-align: justify;
+    padding-bottom: 1vh;
+    line-height: 1;
+    h2 {
       text-align: left;
       font-family: $sans;
       text-decoration: underline dotted;
-
       padding-bottom: 1vh;
     }
-    .about-intro {
+  }
+  .about-recent {
+    text-align: left;
+    font-size: calc(15px + 1vw);
+    padding-bottom: 1vh;
+    line-height: 1;
+    h2 {
       text-align: left;
-
+      font-family: $sans;
+      text-decoration: underline dotted;
+      font-size: calc(20px + 1vw);
       padding-bottom: 1vh;
-      line-height: 1;
     }
-    .about-web {
-      text-align: justify;
-      padding-bottom: 1vh;
-      line-height: 1;
-      h2 {
-        text-align: left;
-        font-family: $sans;
-        text-decoration: underline dotted;
-        padding-bottom: 1vh;
-      }
-    }
-    .about-recent {
+  }
+  .about-motion {
+    text-align: justify;
+    padding-bottom: 1vh;
+    line-height: 1;
+    h2 {
       text-align: left;
-      font-size: calc(15px + 1vw);
+      font-family: $sans;
+      text-decoration: underline dotted;
       padding-bottom: 1vh;
-      line-height: 1;
-      h2 {
-        text-align: left;
-        font-family: $sans;
-        text-decoration: underline dotted;
-        font-size: calc(20px + 1vw);
-        padding-bottom: 1vh;
-      }
     }
-    .about-motion {
-      text-align: justify;
-      padding-bottom: 1vh;
-      line-height: 1;
-      h2 {
-        text-align: left;
-        font-family: $sans;
-        text-decoration: underline dotted;
-        padding-bottom: 1vh;
-      }
+  }
+  .about-about {
+    text-align: left;
+    p {
+      font-size: calc(8px + 0.5vh);
     }
-    .about-about {
-      text-align: left;
-      p {
-        font-size: calc(8px + 0.5vh);
-      }
-      li {
-        font-size: calc(8px + 0.5vh);
-      }
-      a {
-        font-size: calc(8px + 0.5vh);
-      }
-      font-family: $fancy-sans;
+    li {
+      font-size: calc(8px + 0.5vh);
     }
-    margin-right: 15vw;
-    padding-right: 2vw;
-    height: calc(89vh - 1.2rem);
-    overflow-y: auto;
-    overflow-x: hidden;
-    overscroll-behavior: none;
-
-    line-height: 1.25;
-    @include short-view {
-      height: 100%;
+    a {
+      font-size: calc(8px + 0.5vh);
     }
-    @include nav-break {
-      margin-right: 8rem;
-    }
-    /* width */
-    &::-webkit-scrollbar {
-      width: 10px;
-    }
-
-    /* Track */
-    &::-webkit-scrollbar-track {
-      background: $background;
-    }
-
-    /* Handle */
-    &::-webkit-scrollbar-thumb {
-      background: $contrast;
-      border-radius: 10px;
-    }
-
-    /* Handle on hover */
-    &::-webkit-scrollbar-thumb:hover {
-      background: $link;
-      border-radius: 10px;
-    }
+    font-family: $fancy-sans;
   }
 }
