--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -1,193 +1,116 @@
-.contact-wrap {
-
-overflow: hidden;
-  .contact-intro {
-    position: fixed;
-    font-weight: bold;
-    z-index: 11;
-    top: -1rem;
-    left: 20vw;
-    padding: 1rem;
-    text-align: left;
-    line-height: 1.5;
-    font-size: calc(6px + 3vh);
-    background-color: $bg-dark;
-    transform: rotate(6deg);
-    border-radius: 40%;
-
-  }
-  .close-panel {
-    background-color: $bg-dark;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    padding-left: 0.5rem;
-    width: 2rem;
-    border-radius: 0 15px 15px 0;
-    color: $contrast;
-    font-size: 2.5rem;
-    font-weight: 900;
-    font-family: $fancy-sans;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    .close-panel-button {
-      margin: 0 auto;
-      user-select: none;
-    }
-  }
-  @include short-view {
-    top: 1vh;
-    left: 1vw;
-    bottom: 6vh;
-  }
-  .contact-form {
-    position: relative;
-    z-index: 10;
-    width: calc(60vw + 5rem);
-    font-family: $sans;
-    max-height: 17vh;
-
-    @include nav-break {
-      width: calc(100vw - 23rem);
-    
-    }
-  }
-
-  .contact-item {
-    font-family: $sans;
-    font-weight: bold;
-    width: calc(58vw + 1rem);
-    text-align: left;
-    color: $black;
-    @include nav-break {
-      width: calc(100vw - 27rem);
-    
-    }
-
-
-    .form-group {
-      margin-left: -1.3rem;
-      padding-top: 0.5rem;
-      font-size: 1.2rem;
-      label {
-        margin-left: 2rem;
-        font-size: calc(20px + 1vw);
-      }
-
-    }
-    .contact-button {
-      margin: 0.9rem 0 0 0.9rem;
-      button {
-        background-color: $background;
-        color: $white;
-        height: 3rem;
-        font-size: 2rem;
-        font-weight: bold;
-        border-radius: 10px;
-        &:disabled {
-          background-color: $blue;
-          color: $bg-light;
-        }
-      }
-    }
-    .error {
-      color: $red;
-      margin-left: 0.9rem;
-      padding: 0.9rem;
-      font-size: calc(18px + 1vw);
-    }
-    .form-control {
-      font-family: $fancy-sans;
-      display: block;
-      min-width: 16rem;
-      width: 50vw;
-      margin: 1rem 0 0 1rem;
-      font-size: calc(10px + 1vh);
-      padding: 0.5rem;
-      line-height: 1.2;
-      color: $black;
-      background-color: $white;
-      background-clip: padding-box;
-      border: 1px solid $background;
-      border-radius: 0.25rem;
-      transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-
-      @include nav-break {
-        width: calc(100vw - 28rem);
-      
-      }
-    }
-    .form-control-tall {
-      display: block;
-      min-width: 16rem;
-      width: 50vw;
-      margin: 1rem 0 0 1rem;
-      font-family: $fancy-sans;
-      font-size: calc(10px + 1vh);
-      padding: 0.5rem;
-      line-height: 1.1;
-      color: $black;
-      background-color: $white;
-      background-clip: padding-box;
-      border: 1px solid $background;
-      border-radius: 0.25rem;
-      transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-      @include nav-break {
-        width: calc(100vw - 28rem);
-      
-      }
-    }
-  }
-  .social-icon {
-    text-align: right;
-
-    height: calc(200px + 38vmax);
-
-    svg {
-      transform: rotate(20deg);
-      cursor: pointer;
-      position: absolute;
-      z-index: 9;
-      bottom: 0;
-      right: calc(20% - #{1rem / 2});
-      width: calc(50px + 12vmin);
-      fill: $contrast;
-      &:hover {
-        fill: $link;
-      }
-      @include nav-break {
-        right: 8rem;
-      }
-    }
-  }
+.contact-form {
+  position: relative;
+  z-index: 10;
+  width: calc(50vw + 5rem);
   font-family: $sans;
-  color: $white;
-  position: absolute;
-  background-color: $background;
-  top: 5vh;
-  bottom: 5vh;
-  right: 5vw;
-  left: 5vw;
-  z-index: 9;
-  border-radius: 25px;
-  border: solid $bg-dark 10px;
+  max-height: 17vh;
 
-  &.on {
-    transform: translate(0, 0);
-    transition: transform 0.3s ease-out;
-  }
-  &.off {
-    transform: translate(calc(-200vw - 25px), 0);
-    transition: transform 0.3s ease-in;
-    z-index: 8;
-  }
   @include nav-break {
-    right: 7rem;
+    width: calc(100vw - 23rem);
+  }
+}
 
+.contact-item {
+  font-family: $sans;
+  font-weight: bold;
+  width: calc(58vw + 1rem);
+  text-align: left;
+  color: $black;
+  @include nav-break {
+    width: calc(100vw - 27rem);
   }
 
+  .form-group {
+    margin-left: -1.3rem;
+    padding-top: 0.5rem;
+    font-size: 1.2rem;
+    label {
+      margin-left: 2rem;
+      font-size: calc(20px + 1vw);
+    }
+  }
+  .contact-button {
+    margin: 0.9rem 0 0 0.9rem;
+    button {
+      background-color: $background;
+      color: $white;
+      height: 3rem;
+      font-size: 2rem;
+      font-weight: bold;
+      border-radius: 10px;
+      &:disabled {
+        background-color: $blue;
+        color: $bg-light;
+      }
+    }
+  }
+  .error {
+    color: $red;
+    margin-left: 0.9rem;
+    padding: 0.9rem;
+    font-size: calc(18px + 1vw);
+  }
+  .form-control {
+    font-family: $fancy-sans;
+    display: block;
+    min-width: 16rem;
+    width: 50vw;
+    margin: 1rem 0 0 1rem;
+    font-size: calc(10px + 1vh);
+    padding: 0.5rem;
+    line-height: 1.2;
+    color: $black;
+    background-color: $white;
+    background-clip: padding-box;
+    border: 1px solid $background;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+    @include nav-break {
+      width: calc(100vw - 28rem);
+    }
+  }
+  .form-control-tall {
+    display: block;
+    min-width: 16rem;
+    width: 50vw;
+    margin: 1rem 0 0 1rem;
+    font-family: $fancy-sans;
+    font-size: calc(10px + 1vh);
+    padding: 0.5rem;
+    line-height: 1.1;
+    color: $black;
+    background-color: $white;
+    background-clip: padding-box;
+    border: 1px solid $background;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    @include nav-break {
+      width: calc(100vw - 28rem);
+    }
+  }
+}
+.social-icon {
+  text-align: right;
+
+  height: calc(200px + 38vmax);
+
+  svg {
+    transform: rotate(20deg);
+    cursor: pointer;
+    position: absolute;
+    z-index: 9;
+    bottom: 0;
+    right: calc(20% - #{1rem / 2});
+    width: calc(50px + 12vmin);
+    fill: $contrast;
+    &:hover {
+      fill: $link;
+    }
+    @include nav-break {
+      right: 8rem;
+    }
+  }
 }
 .contact-error {
   color: $red;
@@ -199,7 +122,6 @@ overflow: hidden;
 .form-footer {
   text-align: center;
   font-size: calc(5px + 1.8vh);
-
 }
 
 .contact-bottom {
@@ -213,14 +135,15 @@ overflow: hidden;
   bottom: 0;
   background-color: $bg-light;
   padding: 0.5rem;
-  width: 25vw;
-  max-width: 10rem;
+  width: 5rem;
+  height: 5rem;
   border-radius: 40%;
   border: 5px solid $bg-dark;
-  font-size: calc(8px + 2vh);
+  p{
+  font-size: 1.3rem;
+  }
   transform: rotate(-3deg);
   @include nav-break {
     margin-right: 20rem;
   }
 }
-
