--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,9 +1,11 @@
 @import "variables";
 @import "mixins";
 @import "reset";
+@import "root";
 @import "header";
 @import "social";
 @import "nav";
+@import "content-panel";
 @import "about";
 @import "contact";
 @import "gallery";
