--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -122,9 +122,12 @@
     background-color: $background;
     border: solid 3px transparent;
     border-radius: 50%;
+    box-shadow: 2px 2px 5px $background;
     &:hover {
       fill: $link;
       background-color: $contrast;
+      box-shadow: none;
+      transform: scale(0.9);
     }
   }
   img {
