--- a/src/scss/content-panel.scss
+++ b/src/scss/content-panel.scss
@@ -6,12 +6,13 @@
       right: 0;
       bottom: 0;
       padding-left: 0.5rem;
-      width: 2rem;
+      width: 11vw;
+      max-width: 5.5rem;
       border-radius: 0 15px 15px 0;
       color: $contrast;
-      font-size: 2.5rem;
+      font-size: 3rem;
       font-weight: 900;
-      font-family: $fancy-sans;
+      font-family: $sans;
       display: flex;
       align-items: center;
       cursor: pointer;
