--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -26,7 +26,7 @@
   z-index: 10;
   top: 0;
   right: 0;
-  border-radius: 0 0 0 2rem;
+  border-radius: 0 0 0 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -113,7 +113,7 @@
     position: absolute;
     bottom: -3px;
     border-top: solid $background 6px;
-    border-radius: 0 0 0 2rem;
+    border-radius: 0 0 0 10px;
     cursor: pointer;
     width: 100%;
     @include short-view {
