--- a/src/scss/splash.scss
+++ b/src/scss/splash.scss
@@ -24,12 +24,14 @@
     border: solid 10px $bg-dark;
     .splash-header {
       color: $white;
-      margin-top: 1rem;
+      padding-top: 1rem;
+      padding-bottom: 0.5rem;
       font-size: calc(20px + 4vmin);
       font-family: $sans;
       font-weight: bold;
       padding-right: 3vw;
       text-decoration: underline;
+      background-color: $bg-dark;
       text-align: right;
       user-select: none;
       @include nav-break {
@@ -40,7 +42,7 @@
       min-height: 10vh;
       width: calc(100vw - 21.5rem);
       min-width: 70vw;
-      margin: 1rem auto;
+      margin: auto;
 
       .splash-body {
         color: $white;
@@ -49,7 +51,8 @@
         font-weight: bold;
         background-color: $background;
         font-size: calc(1rem + 4vw);
-        max-height: calc(100vh - 31rem);
+        max-height: calc(100vh - 23rem);
+        border-radius: 10px;
         @include short-view {
           max-height: calc(100vh - 25rem);
         }
@@ -83,6 +86,7 @@
         /* Track */
         &::-webkit-scrollbar-track {
           background: $background;
+          border-radius: 10px;
         }
 
         /* Handle */
