minor style changes

--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -14,7 +14,7 @@
   z-index: 12;
   padding: 1rem;
   top: 0;
-  left: 25vw;
+  right: 15vw;
   background-color: $bg-dark;
   border-radius: 0 0 10px 10px;
   h2 {
