put a bird on it... all of it

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,6 +7,7 @@
 @import "nav";
 @import "content-panel";
 @import "about";
+@import "doodle";
 @import "contact";
 @import "gallery";
 @import "projects";
