--- a/src/scss/doodle.scss
+++ b/src/scss/doodle.scss
@@ -28,6 +28,6 @@
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 
 }
