--- a/src/scss/doodle.scss
+++ b/src/scss/doodle.scss
@@ -1,9 +1,10 @@
 .doodle {
     position: fixed;
-    width: 4rem;
+    width: 4.3rem;
+    height: 4.3rem;
     z-index: -1;
     right: 1rem;
-    bottom: 2rem;
+    bottom: 2.2rem;
     opacity: 0.8;
     fill: $black;
     transform: rotate(-6deg);
