--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -10,6 +10,7 @@
   }
 }
 .contact-intro {
+  user-select: none;
   position: fixed;
   z-index: 12;
   padding: 1rem;
@@ -108,12 +109,12 @@
   height: calc(200px + 38vmax);
 
   svg {
-    transform: rotate(20deg);
+    transform: rotate(15deg);
     cursor: pointer;
     position: absolute;
     z-index: 9;
-    bottom: 0;
-    left: 8rem;
+    bottom: 1.5rem;
+    left: 10rem;
     width: 8rem;
     fill: $contrast;
     &:hover {
