--- a/src/scss/splash.scss
+++ b/src/scss/splash.scss
@@ -4,7 +4,8 @@
   width: calc(100vw - 16rem);
   min-width: 70vw;
   min-height: 30vh;
-  max-height: calc(100vh - 24rem);
+  //max-height: calc(100vh - 24rem);
+  max-width: 700px;
   z-index: 1;
   top: calc(10vh + 5rem);
   display: flex;
@@ -12,14 +13,35 @@
   justify-content: flex-start;
   align-items: flex-end;
   border-radius: 25px;
+  .video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+  }
 
+  .video-container iframe,
+  .video-container object,
+  .video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    max-height: 315px;
+    max-width: 560px;
+  }
   .splash-bg {
     width: calc(100vw - 16rem);
     min-width: 70vw;
+    max-height: 420px;
+    max-width: 560px;
     background-color: $background;
     border-radius: 25px;
 
     border: solid 10px $bg-dark;
+
     .splash-header {
       color: $white;
       padding-top: 1rem;
