--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,6 +11,7 @@
 @import "contact";
 @import "gallery";
 @import "projects";
+@import "characters";
 @import "projectsearch";
 @import "splash";
 @import "success";
