--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -35,7 +35,7 @@
   box-shadow: -5px 5px 10px $black;
   font-family: $nav-sans;
   font-weight: bolder;
-  overscroll-behavior: none;
+  //overscroll-behavior: none;
 
   @include short-view {
     height: 100%;
