--- a/src/scss/splash.scss
+++ b/src/scss/splash.scss
@@ -7,22 +7,23 @@
   //max-height: calc(100vh - 24rem);
   max-width: 700px;
   z-index: 1;
-  top: calc(10vh + 5rem);
+  top: calc(5vh + 5rem);
+
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-end;
-  border-radius: 25px;
+  border-radius: 15px;
   .video-container {
     position: relative;
     padding-bottom: 56.25%;
-    padding-top: 30px;
+    padding-top: 10px;
     height: 0;
     overflow: hidden;
   }
-  .ThreeModel {
+  .ThreeScene {
     width: 80%;
-    height: 400px; /* Adjust the height as needed */
+    height: 80%; /* Adjust the height as needed */
   }
   .video-container iframe,
   .video-container object,
